Add key findings to conclusions, fix inconsistencies
Added two findings: (1) physics-informed design produces reliable
synthetic enhancers with 99% specificity and 96.5% GREEN OracleCheck
verdicts, (2) CADENCE matches/exceeds baselines across 7 species.

Fixed inconsistencies: abstract "exceeding" -> "matching or exceeding"
(K562 0.809 vs LegNet 0.811), training curve rho 0.885 -> 0.889 to
match CADENCE results table.

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -70,7 +70,7 @@ $^{1}$Cold Spring Harbor Laboratory\\
 \begin{abstract}
 Deep learning models predict cis-regulatory element (CRE) function with remarkable accuracy, yet synthetic enhancers and promoters designed by these models routinely fail \emph{in vivo}. This gap limits faster biomanufacturing of therapeutic proteins, gene therapies requiring cell-type specific expression, and crops engineered to activate stress-response or growth genes.
 
-\fusemap{} is the first comprehensive framework bridging this gap by integrating biophysics into regulatory DNA prediction and design. The framework comprises seven synergistic components. \physinformer{} and \tileformer{} are the first models predicting biophysical landscapes of DNA: over 500 features spanning thermodynamics, mechanics, electrostatics, and more at 95\% accuracy and up to 12,000$\times$ the speed of conventional calculations, solving the bottleneck of data limiting biophysical genomics research. \cadence{} achieves state-of-the-art prediction, exceeding top published models in human, fly, plant, and more cell lines. \place{} provides the first post-hoc uncertainty quantification for genomic deep learning models, distinguishing reliable predictions from risky extrapolations. \stwoa{}, a pipeline that predicts regulatory activity from conserved DNA biophysical properties, achieved the first successful zero-shot cross-species transfer for quantitative regulatory activity prediction---bypassing species-specific transcription factor binding sites and sequence motifs that traditional models learn from. \physicsvae{} enables inverse design of CREs with targeted biophysical profiles (64\% reconstruction accuracy), while \oraclecheck{} provides a comprehensive in-silico validation protocol---combining physics conformity, composition hygiene, \place{} confidence, and distributional tests---that flags aberrant designs with GREEN/YELLOW/RED verdicts before costly experiments.
+\fusemap{} is the first comprehensive framework bridging this gap by integrating biophysics into regulatory DNA prediction and design. The framework comprises seven synergistic components. \physinformer{} and \tileformer{} are the first models predicting biophysical landscapes of DNA: over 500 features spanning thermodynamics, mechanics, electrostatics, and more at 95\% accuracy and up to 12,000$\times$ the speed of conventional calculations, solving the bottleneck of data limiting biophysical genomics research. \cadence{} achieves state-of-the-art prediction, matching or exceeding top published models in human, fly, plant, and more cell lines. \place{} provides the first post-hoc uncertainty quantification for genomic deep learning models, distinguishing reliable predictions from risky extrapolations. \stwoa{}, a pipeline that predicts regulatory activity from conserved DNA biophysical properties, achieved the first successful zero-shot cross-species transfer for quantitative regulatory activity prediction---bypassing species-specific transcription factor binding sites and sequence motifs that traditional models learn from. \physicsvae{} enables inverse design of CREs with targeted biophysical profiles (64\% reconstruction accuracy), while \oraclecheck{} provides a comprehensive in-silico validation protocol---combining physics conformity, composition hygiene, \place{} confidence, and distributional tests---that flags aberrant designs with GREEN/YELLOW/RED verdicts before costly experiments.
 
 Through experiments spanning multiple species, \fusemap{} reveals biophysics' role in regulatory DNA and demonstrates that conserved biophysical features explain 4$\times$ more regulatory activity in plants than animals, enabling unprecedented zero-shot plant-to-plant transfer ($\rho = 0.70$). For therapeutics, \fusemap{}-designed liver-targeted enhancers achieve 99\% specificity with built-in naturality validation, absent from existing pipelines---ensuring designs work \emph{in vivo}. \fusemap{} represents a paradigm shift toward reliable DNA engineering and unlocks biophysical-informed regulatory genomics---enabling confident synthetic CRE design in any context: gene therapy, protein manufacturing, and even cross-species bioengineering, bypassing costly wet lab assays.
 \end{abstract}
@@ -684,10 +684,10 @@ This concordance with known cell-type-specific regulatory programs (erythroid GA
     (70,0.871) (75,0.874) (80,0.875) (85,0.875) (90,0.876) (95,0.877) (100,0.874)
 };
 
-\legend{DeepSTARR ($\rho$=0.885)}
+\legend{DeepSTARR Dev ($\rho$=0.889)}
 \end{axis}
 \end{tikzpicture}
-\caption{\textbf{\cadence{} learns efficiently from large-scale data.} Validation Spearman $\rho$ vs.\ training epoch on DeepSTARR (352K training sequences). The model reaches $\rho>0.80$ by epoch 30, with continued improvement plateauing around epoch 70. Final test performance ($\rho=0.885$) represents state-of-the-art on this benchmark. Data extracted from actual training logs; each point is a real validation checkpoint.}
+\caption{\textbf{\cadence{} learns efficiently from large-scale data.} Validation Spearman $\rho$ vs.\ training epoch on DeepSTARR (352K training sequences). The model reaches $\rho>0.80$ by epoch 30, with continued improvement plateauing around epoch 70. Final test performance on the developmental promoter task ($\rho=0.889$) represents state-of-the-art on this benchmark. Data extracted from actual training logs; each point is a real validation checkpoint.}
 \label{fig:training_curves}
 \end{figure}
 
@@ -1392,6 +1392,8 @@ We have introduced \fusemap{}, a framework that improves generalization and cros
 \item \textbf{Biophysical features enable cross-species transfer}: DNA shape and electrostatic potential are conserved across species even when sequence similarity is low. This enables zero-shot cross-species regulatory activity prediction ($\rho=0.59$--$0.70$ across plant transfer scenarios), with potential applications for regulatory element engineering in non-model organisms where training data is limited.
 \item \textbf{Neural surrogates accelerate biophysical computation}: Computationally expensive biophysical calculations can be accurately approximated by neural networks with $>$10,000$\times$ acceleration, making genome-scale biophysical profiling practical.
 \item \textbf{Calibrated uncertainty aids prioritization}: Calibrated prediction intervals enable prioritization of high-confidence predictions, with computational experiments suggesting potential for improved experimental efficiency.
+\item \textbf{Physics-informed design produces reliable synthetic enhancers}: The end-to-end pipeline generates cell-type-specific therapeutic enhancers with 99\% predicted specificity for liver targeting (4.39 log-units, $>$10,000-fold) and 96.5\% GREEN \oraclecheck{} naturality verdicts, compared to only 12\% GREEN for matched random sequences. This demonstrates that biophysical constraints yield designs consistent with natural regulatory landscapes, addressing a critical gap in existing design pipelines that lack naturality validation.
+\item \textbf{\cadence{} matches or exceeds published baselines across diverse species}: Our optimized architecture matches LegNet on K562 human MPRA ($r$=0.809 vs 0.811) while outperforming DeepSTARR-CNN by 18\% on Drosophila STARR-seq ($r$=0.920 vs 0.779), and achieves $r$=0.958 on yeast---spanning 7 species from yeast to human with a single architecture.
 \end{enumerate}
 
 \textbf{Mechanistic hypothesis.} Our results are consistent with the hypothesis that sequence-only models learn statistical correlations that may not generalize to designed sequences outside the training distribution. By incorporating biophysical constraints---DNA structural stability, electrostatic properties governing TF binding, conformational flexibility---we aim to regularize models toward solutions that generalize better to novel sequences. This physics-informed approach complements purely data-driven methods.
